Fix conflicts due to squash.

--- a/src/styles/pages/_letter.scss
+++ b/src/styles/pages/_letter.scss
@@ -149,17 +149,13 @@
   .letter-recipients {
     display: none;
   }
-
-  button {
-    display: none;
-  }
-
+  
   .letter-page {
 
     margin-top: 80px;
     border: none;
     padding: 10px;
-    
+
     h1 {
       font-size: 24px;
     }
